@@ -8,6 +8,8 @@ var x;
 
 1 2.3 40.05
 
-// "строка"
+"строка"
+"""мульти
+      |строка"""
 
-// ~метка:
+~метка
