@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------
+r4 | serge.vakulenko | 2008-04-28 21:01:00 +0400 (Пнд, 28 Апр 2008) | 3 lines
+
+Scanner made independent of parser.
+
+
+------------------------------------------------------------------------
 r3 | serge.vakulenko | 2008-04-27 23:21:28 +0400 (Вск, 27 Апр 2008) | 3 lines
 
 Some code cleanup.
